# SilentProgrammingLanguage

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  buildTool.py  grammar.txt  package.si  package.spck
SilentCompiler/: .Makefile.swp  CMakeLists.txt  CmakeLists.txt  Makefile  ackermann.silent  fib.silent  fibonacci.silent  output.test  package.si  parsetest.silent  silent.silent  test.silent  test2.silent
SilentCompiler/docs/: grammar  testSyntax
SilentCompiler/documentation/: TODO  grammar  grammar.ebnf  grammar.txt  grammar2.ebnf  intCode  sampleAST
SilentCompiler/include/: SCodeGen.hpp  SFiles.hpp  SHelper.hpp  SParser.hpp  SParser2.hpp  SSemantics.hpp  STokenizer.hpp  SilentC.h  common.h  lexer.h  parser.h  semantics.h
SilentCompiler/src/: SCodeGen.cpp  SCodeGen.hpp  SCompiler.cpp  SFiles.hpp  SParser.cpp  SParser.hpp  SParser2.cpp  SParser2.hpp  SSemantics.cpp  SSemantics.hpp  STokenizer.cpp  STokenizer.hpp  SilentBytecode.c  SilentBytecode.h  SilentCleanup.cpp  SilentCleanup.hpp  SilentCodeGen.cpp  SilentCodeGen.hpp  SilentCompiler.c  SilentCompiler.cpp  SilentCompiler.h  SilentCompiler.hpp  SilentConsole.hpp  SilentDebugger.cpp  SilentFiles.hpp  SilentHelper.c  SilentHelper.h  SilentIO.hpp  SilentIntCode.cpp  SilentIntCode.hpp  SilentParser.c  SilentParser.cpp  SilentParser.h  SilentParser.hpp  SilentStructures.hpp  SilentTokenizer.c  SilentTokenizer.cpp  SilentTokenizer.h  SilentTokenizer.hpp  _SilentCompiler.c_  (+11 more)
SilentCompiler/src/Assembler/: SilentAssembler.cpp  SilentAssembler.hpp  fibonacci.txt  test.txt
SilentCompiler/src/old/: SilentCleanup.hpp  SilentCompiler.cpp  SilentCompiler.hpp  SilentConsole.cpp  SilentDebugger.cpp  SilentDebugger.hpp  SilentFiles.hpp  SilentIntCode.cpp  SilentIntCode.hpp  (+9 more)
SilentCompiler/src2/: SCompiler.cpp  SCompiler.hpp  SFiles.hpp  SParser.cpp  SParser.hpp  STokenizer.cpp  STokenizer.hpp  STypes.hpp
SilentCompiler/src_cpp/: SilentCompiler.cpp  SilentCompiler.hpp  SilentHelper.cpp  SilentHelper.hpp  SilentManager.cpp  SilentParser.cpp  SilentParser.hpp  SilentReader.cpp  SilentReader.hpp  SilentTokenizer.cpp  SilentTokenizer.hpp  SilentWriter.cpp  SilentWriter.hpp
SilentCompiler/src_new/: SilentCleanup.hpp  SilentCodeGen.cpp  SilentCodeGen.hpp  SilentCompiler.cpp  SilentCompiler.hpp  SilentParser.cpp  SilentParser.hpp  SilentTokenizer.cpp  SilentTokenizer.hpp
SilentCompiler/src_old/: SCompiler.cpp  STokenizer.cpp  STokenizer.hpp  SilentHelper.cpp  SilentManager.cpp  SilentParser.hpp  SilentTokenizer.hpp  SilentWriter.cpp
useless/Silent2/: CMakeLists.txt
useless/Silent_Bootstrap_Old/: CMakeLists.txt
(+246 files in other folders)
